# Qt

./: README.md
TrigoTrain/: CMakeLists.txt  sharktrainer.cpp  sharktrainer.h  trainingData.txt
TrigoTrain/lib/: CMakeLists.txt  board.cpp  board.h  trianglegrid.cpp  trianglegrid.h
TrigoTrain/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  screenboard.cpp  sharktrainer.cpp  sharktrainer.h
TrigoTrain/tests/: CMakeLists.txt  boardtests.cpp
board/src/: CMakeLists.txt  board.cpp  board.h  main.cpp  mainwindow.ui  triangle.cpp  triangle.h  trianglegrid.cpp  trianglegrid.h
board/tests/: boardtests.cpp  trianglegridtests.cpp
cmake0/: CMakeLists.txt  main.cpp
test0/: CMakeLists.txt
test0/src/: CMakeLists.txt  main.cpp  triangle.cpp  triangle.h  trianglegrid.cpp  trianglegrid.h
test0/tests/: CMakeLists.txt  trianglegridtests.cpp  triangletests.cpp
trigo/: CMakeLists.txt
trigo/src/: CMakeLists.txt  board.cpp  board.h  diagramscene.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamedialog.ui  screenboard.cpp  screenboard.h  triangle.h  trianglegrid.cpp  trianglegrid.h
trigo/tests/: boardtests.cpp  trianglegridtests.cpp
